fix: button wrapper min hieght for collapsed removed button

--- a/src/components/Note/note.scss
+++ b/src/components/Note/note.scss
@@ -130,6 +130,7 @@
 .button-wrapper {
     display: flex;
     flex-direction: column;
+    min-height: 111px;
 }
 
 .button {
